bk_ida/gccida/c1/print_spelling
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_spelling/src/c-typeck.c:5060:22: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
if ( spelling_base < spelling_0 ) 
                     ^~~~~~~~~~
                     spelling
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_spelling/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_spelling/src/c-typeck.c:5070:14: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
if ( ++v1 >= spelling_0 ) 
             ^~~~~~~~~~
             spelling
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_spelling/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_spelling/src/obj/c-typeck.o] Error 1
